--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,3 +25,4 @@ jobs:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
 
       # consider the current state of terraform before choosing command whether that be apply / destroy
+      # test trigger
